--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-visually-hidden": "^1.1.1",
     "@tanstack/react-query": "^5.62.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -31,11 +32,13 @@
     "next": "^14.2.22",
     "next-themes": "^0.4.4",
     "node-appwrite": "^14.1.0",
+    "nuqs": "^1.19.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-use": "^17.6.0",
     "recharts": "^2.15.0",
     "server-only": "^0.0.1",
     "sonner": "^1.7.1",
