--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-visually-hidden": "^1.1.1",
     "@tanstack/react-query": "^5.62.15",
     "@tanstack/react-table": "^8.21.2",
+    "@types/react-big-calendar": "^1.8.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -36,6 +37,7 @@
     "node-appwrite": "^14.1.0",
     "nuqs": "^1.19.1",
     "react": "^18",
+    "react-big-calendar": "^1.14.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
